--- a/app/components/subcases/subcase-detail-nav.hbs
+++ b/app/components/subcases/subcase-detail-nav.hbs
@@ -6,14 +6,17 @@
     {{t "documents"}}
   </Auk::Tab>
 </Auk::Tabs> --}}
-<ul class="au-c-anchor-nav">
-  <li>
-    <a href="#case" class="js-anchor">Dossier</a>
-  </li>
-  <li>
-    <a href="#documents" class="js-anchor">Documenten</a>
-  </li>
-  <li>
-    <a href="#agenda" class="js-anchor">Agendering</a>
-  </li>
-</ul>
+<div class="c-anchor-nav-holder">
+  <p>Op deze pagina:</p>
+  <ul class="au-c-anchor-nav">
+    <li>
+      <a href="#case" class="js-anchor">Dossier</a>
+    </li>
+    <li>
+      <a href="#documents" class="js-anchor">Documenten</a>
+    </li>
+    <li>
+      <a href="#agenda" class="js-anchor">Historiek</a>
+    </li>
+  </ul>
+</div>
