add publication step

--- a/app/components/subcase/subcase-versions-panel.hbs
+++ b/app/components/subcase/subcase-versions-panel.hbs
@@ -1,5 +1,5 @@
 <div class="auk-u-mb-8">
   <Subcase::SubcaseVersionsPanel::SubcaseVersionsView
-    @subcase={{@subcase}}
+    @subcase={{@subcase}} @demo={{@demo}}
   />
 </div>
