--- a/app/components/subcase-demo/publication-status.hbs
+++ b/app/components/subcase-demo/publication-status.hbs
@@ -1,18 +1,17 @@
-<div {{did-update (perform this.loadAgendaData)}}>
+<div class="auk-u-mb-8">
   <Auk::Panel data-test-subcase-description-panel>
     <Auk::Panel::Header>
       <Auk::Toolbar>
         <Auk::Toolbar::Group @position="left">
           <Auk::Toolbar::Item>
             <h4 class="auk-panel__title">
-              Historiek
+              Status historiek
             </h4>
           </Auk::Toolbar::Item>
         </Auk::Toolbar::Group>
       </Auk::Toolbar>
     </Auk::Panel::Header>
     <Auk::Panel::Body>
-      {{#if @demo}}
       <div class="auk-u-mb-2">
         <div class="au-u-flex au-u-flex--spaced-tiny">  
           <p class="au-u-medium">
@@ -62,42 +61,6 @@
           </div>
         </li>
       </ul>
-      {{else}}
-      <div class="auk-u-mb-2">
-        {{#if this.loadAgendaData.isRunning}}
-          <div class="auk-loader" role="alert" aria-busy="true"></div>
-        {{else if this.modelsOfMeetings}}
-          <div class="au-u-flex au-u-flex--spaced-tiny">
-            <p class="au-u-medium">
-              {{t "is-on-agenda"}}
-
-              {{#each this.modelsOfMeetings as |models index| }}
-                {{#if (eq index 0)}}
-                {{#let models.[0] models.[1] models.[2] as |meeting agenda agendaitem|}}
-                  <AuLink
-                    data-test-subcase-description-agenda-link
-                    @route="agenda.agendaitems.agendaitem"
-                    @models={{array
-                      meeting.id
-                      agenda.id
-                      agendaitem.id
-                    }}
-                  >
-                    {{! prettier-ignore}}
-                    {{date-phrase meeting.plannedStart}}
-                    {{!-- {{if (has-next models this.modelsOfMeetings) ", "}} --}}
-                  </AuLink>
-                {{/let}}
-                {{/if}}
-              {{/each}}
-            </p>
-          </div>
-        {{else}}
-          <Auk::EmptyState @message={{t "not-yet-on-agenda"}} />
-        {{/if}}
-      </div>
-      <Subcase::Timeline @subcase={{@subcase}}/>
-      {{/if}}
     </Auk::Panel::Body>
   </Auk::Panel>
 </div>
