finalise case layout

--- a/app/components/documents/linked-documents-panel.hbs
+++ b/app/components/documents/linked-documents-panel.hbs
@@ -1,4 +1,4 @@
-<div class="auk-u-mb-4" {{did-update (perform this.loadData) @agendaitemOrSubcase}}>
+<div class="auk-u-mb-4" {{did-update (perform this.loadData) @agendaitemOrSubcase}} ...attributes>
   <Auk::Panel>
     <Auk::Panel::Header>
       <Auk::Toolbar>
