--- a/app/components/subcase-demo/publication-status.hbs
+++ b/app/components/subcase-demo/publication-status.hbs
@@ -11,7 +11,7 @@
         </Auk::Toolbar::Group>
       </Auk::Toolbar>
     </Auk::Panel::Header>
-    <Auk::Panel::Body>
+    <Auk::Panel::Body class="auk-u-bg-alt">
       <div class="auk-u-mb-2">
         <div class="au-u-flex au-u-flex--spaced-tiny">  
           <p class="au-u-medium">
