--- a/app/components/subcase/subcase-versions-panel/subcase-versions-view.hbs
+++ b/app/components/subcase/subcase-versions-panel/subcase-versions-view.hbs
@@ -5,13 +5,13 @@
         <Auk::Toolbar::Group @position="left">
           <Auk::Toolbar::Item>
             <h4 class="auk-panel__title">
-              Historiek
+              Agendaversies
             </h4>
           </Auk::Toolbar::Item>
         </Auk::Toolbar::Group>
       </Auk::Toolbar>
     </Auk::Panel::Header>
-    <Auk::Panel::Body>
+    <Auk::Panel::Body class="auk-u-bg-alt">
       {{#if @demo}}
       <div class="auk-u-mb-2">
         <div class="au-u-flex au-u-flex--spaced-tiny">  
@@ -26,7 +26,7 @@
         >
           <div class="vlc-status-timeline__dot"></div>
           <div class="vlc-status-timeline__text">
-            Gepubliceerd op <AuLinkExternal @href="#!">02 februari 2023</AuLinkExternal>
+            Op te starten op <AuLinkExternal @href="#!">22 november 2023</AuLinkExternal>
           </div>
         </li>
         <li
@@ -34,15 +34,7 @@
         >
           <div class="vlc-status-timeline__dot"></div>
           <div class="vlc-status-timeline__text">
-            Op te starten op <AuLinkExternal @href="#!">02 februari 2023</AuLinkExternal>
-          </div>
-        </li>
-        <li
-          class="vlc-status-timeline__item vlc-status-timeline__item--neutral"
-        >
-          <div class="vlc-status-timeline__dot"></div>
-          <div class="vlc-status-timeline__text">
-            Dringend op <AuLinkExternal @href="#!">02 februari 2023</AuLinkExternal>
+            Dringend op <AuLinkExternal @href="#!">22 november 2023</AuLinkExternal>
           </div>
         </li>
         <li
