--- a/app/components/subcases/subcase-header.hbs
+++ b/app/components/subcases/subcase-header.hbs
@@ -10,7 +10,7 @@
     </Auk::Toolbar::Group>
     <Auk::Toolbar::Group @position="right">
       {{#if (user-may "manage-agendaitems")}}
-        {{#if (not-eq @currentRoute 'cases.case.subcases-demo.subcase-demo.publication')}}
+        {{!-- {{#if (not-eq @currentRoute 'cases.case.subcases-demo.subcase-demo.publication')}}
         <Auk::Toolbar::Item>
           {{#if (or this.loadData.isRunning this.isLoading)}}
             <div class="auk-loader" role="alert" aria-busy="true"></div>
@@ -46,7 +46,7 @@
             </AuDropdown>
           {{/if}}
         </Auk::Toolbar::Item>
-        {{/if}}
+        {{/if}} --}}
         <Auk::Toolbar::Item>
           <AuDropdown
             data-test-subcase-header-actions-dropdown={{true}}
