--- a/app/components/subcase-demo/publication-title.hbs
+++ b/app/components/subcase-demo/publication-title.hbs
@@ -19,31 +19,32 @@
       </Auk::Toolbar>
     </Auk::Panel::Header>
     <Auk::Panel::Body>
-      <div class="au-u-flex au-u-flex--vertical-center au-u-flex--spaced-small auk-u-mb-1">
-        <AuPill @skin="success" @size="small">Gepubliceerd</AuPill>
-        <p class="auk-overline">Publicatie - via ministerraad - 6171</p>
-      </div>
+      <p class="auk-overline">Publicatie - via ministerraad - 6171</p>
       <AuHeading @level="4" @skin="4">{{capitalize @subcase.shortTitle}}</AuHeading>
       {{#if @subcase.title}}
       <p class="auk-u-mb-0">{{capitalize @subcase.title}}</p>
       {{/if}}
     </Auk::Panel::Body>
     <Auk::Panel::Body>
-      <div class="au-o-grid au-u-1-1">
-        <div class="au-o-grid__item au-u-1-2 au-u-1-3@medium">
-          <AuHeading @level="4" @skin="6">Numa nummer</AuHeading>
-          <p>2022031830</p>
+      <div class="au-o-grid au-o-grid--small au-u-1-1">
+        <div class="au-o-grid__item au-u-1-2 au-u-1-4@medium">
+          <AuHeading @level="4" @skin="6">Status</AuHeading>
+          <AuPill @skin="success" @size="small">Gepubliceerd</AuPill>
         </div>
-        <div class="au-o-grid__item au-u-1-2 au-u-1-3@medium">
+        <div class="au-o-grid__item au-u-1-2 au-u-1-4@medium">
+          <AuHeading @level="4" @skin="6">Numa nummer</AuHeading>
+          <p class="auk-u-mt-1">2022031830</p>
+        </div>
+        <div class="au-o-grid__item au-u-1-2 au-u-1-4@medium">
           <AuHeading @level="4" @skin="6">Datum ontvangst</AuHeading>
-          <p>01-04-2023</p>
+          <p class="auk-u-mt-1">01-04-2023</p>
         </div>
       </div>
     </Auk::Panel::Body>
   </Auk::Panel>
 </div>
 
-<div  id="case" class="auk-u-mb-4">
+<div class="auk-u-mb-4">
   <Auk::Panel data-test-subcase-description-panel>
     <Auk::Panel::Header>
       <Auk::Toolbar>
