--- a/app/templates/cases/case/subcases-demo/subcase-demo/vp.hbs
+++ b/app/templates/cases/case/subcases-demo/subcase-demo/vp.hbs
@@ -1,32 +1,13 @@
 {{#if this.model}}
-  <div id="case" {{did-insert this.observeElement}}>
-    <Subcase::SubcaseTitlesPanel
+  <div id="case">
+    <SubcaseDemo::VpTitle
       @subcase={{@model.subcase}}
       @meeting={{this.meeting}}
-      @allowEditing={{user-may "manage-cases"}}
     />
   </div>
-  <Mandatees::MandateesPanel
-    @referenceDate={{if
-      this.meeting
-      this.meeting.plannedStart
-      this.model.subcase.created
-    }}
-    @mandatees={{this.mandatees}}
-    @submitter={{this.submitter}}
-    @emptyStateMessage={{if this.showMandateesNotApplicableMessage (t "not-applicable")}}
-    @allowEditing={{user-may "manage-cases"}}
-    @onSave={{this.saveMandateeData}}
-  />
-  <Utils::GovernmentAreas::GovernmentAreasPanel
-    @referenceDate={{or this.meeting.plannedStart this.agenda.created @model.subcase.created}}
-    @governmentAreas={{@model.subcase.governmentAreas}}
-    @allowEditing={{user-may "manage-cases"}}
-    @onSave={{this.saveGovernmentAreas}}
-  />
 
   {{!-- Documents --}}
-  <div id="documents" class="auk-u-mb-4" {{did-insert this.observeElement}}>
+  <div id="documents" class="auk-u-mb-4">
     <Auk::Panel data-test-subcase-description-panel>
       <Auk::Panel::Header>
         <Auk::Toolbar>
@@ -34,7 +15,7 @@
             <Auk::Toolbar::Item>
               <div class="au-u-flex au-u-flex--spaced-small">
                 <h4 class="auk-panel__title">
-                  {{t "documents"}}
+                  Nieuwste documenten
                 </h4>
               </div>
             </Auk::Toolbar::Item>
@@ -42,50 +23,135 @@
         </Auk::Toolbar>
       </Auk::Panel::Header>
       <Auk::Panel::Body>
-        {{#if this.documentsAreVisible}}
-          <Documents::DocumentCardList
-            @pieces={{this.model.pieces}}
-            @onAddPiece={{perform this.addPiece}}
-            @didDeleteContainer={{this.refresh}}
-            @isEditable={{true}}
-          />
-        {{else}}
-          <div>
-            <AuAlert
-              @skin="info"
-              @icon="info-circle"
-              class="au-u-margin-bottom-none"
-            >
-              {{t "no-documents-yet"}}
-            </AuAlert>
-          </div>
-        {{/if}}
+        <AuHeading @level="4" @skin="6">Eerste principiële goedkeuring</AuHeading>
+        <ul>
+          <li class="vlc-document-list__item">
+            <div class="auk-o-flex auk-o-flex--spaced auk-o-flex--vertical-center">
+              <a href="#!" rel="noreferrer noopener" data-test-document-badge-link="">
+                <div class="auk-icon auk-icon--default">
+                  <i class="ki ki-document"></i>
+                </div>
+                <span>
+                  VR 2022 2212 DOC.0357-3BIS Parkendecreet -Beslissingsfiche.pdf(getekend)
+                </span>
+              </a>
+            </div>
+          </li>
+          <li class="vlc-document-list__item">
+            <div class="auk-o-flex auk-o-flex--spaced auk-o-flex--vertical-center">
+              <a href="#!" rel="noreferrer noopener" data-test-document-badge-link="">
+                <div class="auk-icon auk-icon--default">
+                  <i class="ki ki-document"></i>
+                </div>
+                <span>
+                  VR 2022 2212 DOC.0357-3BIS Parkendecreet -Ontwerpdecreet.docx
+                </span>
+              </a>
+            </div>
+          </li>
+          <li class="vlc-document-list__item">
+            <div class="auk-o-flex auk-o-flex--spaced auk-o-flex--vertical-center">
+              <a href="#!" rel="noreferrer noopener" data-test-document-badge-link="">
+                <div class="auk-icon auk-icon--default">
+                  <i class="ki ki-document"></i>
+                </div>
+                <span>
+                  VR 2022 2212 DOC.0357-3BIS Parkendecreet -Nota.pfd
+                </span>
+              </a>
+            </div>
+          </li>
+        </ul>
+        <AuHeading @level="4" @skin="6" class="auk-u-mt-4">Tweede principiële goedkeuring</AuHeading>
+        <ul>
+          <li class="vlc-document-list__item">
+            <div class="auk-o-flex auk-o-flex--spaced auk-o-flex--vertical-center">
+              <a href="#!" rel="noreferrer noopener" data-test-document-badge-link="">
+                <div class="auk-icon auk-icon--default">
+                  <i class="ki ki-document"></i>
+                </div>
+                <span>
+                  VR 2022 2212 DOC.0357-3BIS Parkendecreet -Beslissingsfiche.pdf(getekend)
+                </span>
+              </a>
+            </div>
+          </li>
+          <li class="vlc-document-list__item">
+            <div class="auk-o-flex auk-o-flex--spaced auk-o-flex--vertical-center">
+              <a href="#!" rel="noreferrer noopener" data-test-document-badge-link="">
+                <div class="auk-icon auk-icon--default">
+                  <i class="ki ki-document"></i>
+                </div>
+                <span>
+                  VR 2022 2212 DOC.0357-3BIS Parkendecreet -Ontwerpdecreet.docx
+                </span>
+              </a>
+            </div>
+          </li>
+          <li class="vlc-document-list__item">
+            <div class="auk-o-flex auk-o-flex--spaced auk-o-flex--vertical-center">
+              <a href="#!" rel="noreferrer noopener" data-test-document-badge-link="">
+                <div class="auk-icon auk-icon--default">
+                  <i class="ki ki-document"></i>
+                </div>
+                <span>
+                  VR 2022 2212 DOC.0357-3BIS Parkendecreet -Nota.pfd
+                </span>
+              </a>
+            </div>
+          </li>
+        </ul>
       </Auk::Panel::Body>
-      {{#if (user-may "manage-documents")}}
-
-      <Auk::Panel::Footer>
-        <AuButton
-          data-test-route-cases---subcase-documents-add
-          @skin="naked"
-          @icon="plus"
-          class="au-u-padding-left-none"
-          {{on "click" this.openPieceUploadModal}}
-        >
-          {{t "documents-add"}}
-        </AuButton>
-      </Auk::Panel::Footer>
-      {{/if}}
     </Auk::Panel>
   </div>
 
-  <Documents::LinkedDocumentsPanel @agendaitemOrSubcase={{this.subcase}}/>
 
-  <div id="agenda" {{did-insert this.observeElement}}>
-    {{!-- <Subcase::SubcaseAgendaPanel @subcase={{@model.subcase}} /> --}}
-     <Subcase::SubcaseVersionsPanel @subcase={{@model.subcase}} />
+  <div id="agenda">
+    <Auk::Panel data-test-subcase-description-panel>
+      <Auk::Panel::Header>
+        <Auk::Toolbar>
+          <Auk::Toolbar::Group @position="left">
+            <Auk::Toolbar::Item>
+              <div class="au-u-flex au-u-flex--spaced-small">
+                <h4 class="auk-panel__title">
+                  Document versies
+                </h4>
+              </div>
+            </Auk::Toolbar::Item>
+          </Auk::Toolbar::Group>
+        </Auk::Toolbar>
+      </Auk::Panel::Header>
+      <Auk::Panel::Body class="auk-u-bg-alt">
+        <ul class="vlc-status-timeline">
+          <li
+            class="vlc-status-timeline__item vlc-status-timeline__item--neutral"
+          >
+            <div class="vlc-status-timeline__dot"></div>
+            <div class="vlc-status-timeline__text au-u-flex au-u-flex--spaced-small au-u-1-1">
+              Verzonden op 22 november 2023 <AuLinkExternal @icon="chevron-right" @iconAlignment="right" @href="!#">Bekijk documenten</AuLinkExternal>
+            </div>
+          </li>
+          <li
+            class="vlc-status-timeline__item vlc-status-timeline__item--neutral"
+          >
+            <div class="vlc-status-timeline__dot"></div>
+            <div class="vlc-status-timeline__text au-u-flex au-u-flex--spaced-small au-u-1-1">
+              Upgedate op 22 november 2023 <AuLinkExternal @icon="chevron-right" @iconAlignment="right" @href="!#">Bekijk documenten</AuLinkExternal>
+            </div>
+          </li>
+          <li
+            class="vlc-status-timeline__item vlc-status-timeline__item--neutral"
+          >
+            <div class="vlc-status-timeline__dot"></div>
+            <div class="vlc-status-timeline__text au-u-flex au-u-flex--spaced-small au-u-1-1">
+               Dringend op 15 november 2023 <AuLinkExternal @icon="chevron-right" @iconAlignment="right" @href="!#">Bekijk documenten</AuLinkExternal>
+            </div>
+          </li>
+        </ul>
+      </Auk::Panel::Body>
+    </Auk::Panel>
   </div>
 
- 
 {{/if}}
 
 <ConfirmationModal
