added comment to sent-to-vp modal

--- a/app/components/vp/sent-to-vp-modal.hbs
+++ b/app/components/vp/sent-to-vp-modal.hbs
@@ -29,8 +29,10 @@
             </li>
           {{/each}}
         </ul>
-      {{else}}
-
+      {{/if}}
+      {{#if @submissionActivity.comment}}
+        <h5>{{t "remarks"}}</h5>
+        <p>{{@submissionActivity.comment}}</p>
       {{/if}}
     </AuContent>
   </:body>
